apps/attic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${attic_service_name}
  namespace: ${attic_namespace}
  labels:
    app.kubernetes.io/name: attic
spec:
  replicas: ${attic_replicas}
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: attic
  template:
    metadata:
      labels:
        app.kubernetes.io/name: attic
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: atticd
          image: ${attic_image}
          imagePullPolicy: ${attic_image_pull_policy}
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          command:
            - /bin/sh
            - -ec
            - |
              [...]
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: ${attic_requests_cpu}
              memory: ${attic_requests_memory}
            limits:
              cpu: ${attic_limits_cpu}
              memory: ${attic_limits_memory}
          volumeMounts:
            - name: storage
              mountPath: /var/lib/atticd/storage
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: ${attic_service_name}-storage
