apps/attic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${attic_service_name}
  namespace: ${attic_namespace}
  labels:
    app.kubernetes.io/name: attic
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: attic
  ports:
    - name: http
      port: ${attic_service_port}
      targetPort: http
      protocol: TCP
